Revision history for Dancer

1.3115 09.06.2013 

    [ BUG FIXES ]
    * GH #605: pass'ed megasplat with no further routes cause 404, not 500.
        (vlyon)

    [ DOCUMENTATION ]
    * GH #934: Added example of HAProxy deployment. (Anton Gerasimov)

    [ MISC ]
    * Tests now require Test::TCP v1.30+ (previous version had too short a
        timeout and tests were failing). (Yanick Champoux)

1.3114 02.06.2013

    [ ENHANCEMENTS ]
    * GH #919: 'dancer' script exits with code 255 if application 
        name is invalid. (ppisar)
    * GH #871: now recognize HTTP_X_FORWARDED_PROTO. (mlbarrow)
    * GH #926: make messages from fatal warnings show up in the logs. 
        (Max Maischein)
    * GH #930: speed improvement. (ichesnokov)
    * GH #859: strip illegal characters from cookie name. (Colin Keith)
    * GH #924: non-'/' apps behind proxies now possible using 'request-base'
        header. (Mikolaj Kucharski)

    [ BUG FIXES ]
    * GH #724: app.pl obeys --confdir. (Yanick Champoux)
    * GH #927: logging format using 'h' now play nicely if no header present.
        (ironcamel)

    [ DOCUMENTATION ]
    * GH #922: Add example of request parameters. (Gabor Szabo)
    * Add scheme line for ngnix config in D::Deployment.

1.3113 08.05.2013

    [ ENHANCEMENTS ]
    * GH #869: leave body parameters alone if deserialization failed
        (brianphillips).
    * GH #912: send_file was returning 500 instead of 404 for non-existent
        files. (Fabrice Gabolde)
    * GH #914: add link to melezhik's psgi chef cookbook.
    * GH #923: implement lazy session flushing. (David Golden)

    [ BUG FIXES ]
    * GH #920: fix pod for Dancer::Development. (ppisar)

    [ DOCUMENTATION ]
    * GH #915: add warning about behaviour of hooks with multiple packages
     loaded by load_app (racke).
    * GH #918: Fix headers syntax in Dancer::Response perldoc
      (Vyacheslav Matyukhin).


1.3112 10.04.2013

    [ ENHANCEMENTS ]