@@ -41,6 +41,7 @@ A huge thank you to all of them!
     Chris Andrews <chrisandrews@venda.com>
     chromatic <chromatic@wgz.org>
     Colin Keith <colinmkeith@gmail.com>
+    Craig Treptow <craig.treptow@gmail.com>
     Danijel Tasov <dt@korn.shell.la>
     Dave Doyle <dave.s.doyle@gmail.com>
     David Moreno <david@axiombox.com>
@@ -55,6 +56,7 @@ A huge thank you to all of them!
     Ilya Chesnokov <chesnokov.ilya@gmail.com>
     ironcamel <naveedm9@gmail.com>
     Ivan Bessarabov <ivan@bessarabov.ru>
+    Jakob Voss <jakob@nichtich.de>
     James Aitken <loonypandora@gmail.com>
     Joel Roth <joelz@pobox.com>
     John Wittkoski <jwittkoski@gmail.com>
