@@ -56,5 +56,5 @@
          "url" : "https://github.com/PerlDancer/Dancer"
       }
    },
-   "version" : "1.3115"
+   "version" : "1.3116"
 }
